[FIX] web: prevent kanban record dropdown menu overlap header while scrolling
Before this commit:
When scrolling, the Kanban record drop-down menu overlap Kanban header.

After this commit:
The Kanban record drop-down menu should not overlap with the Kanban header while
scrolling.

Task-4686607

closes odoo/odoo#205897

X-original-commit: e1984a24e238add2d583e9698818ad03080dd972

--- a/addons/web/static/src/views/kanban/kanban_record.scss
+++ b/addons/web/static/src/views/kanban/kanban_record.scss
@@ -92,7 +92,6 @@
 
     .o_dropdown_kanban {
         visibility: hidden;
-        z-index: 1;
 
         @include media-breakpoint-down(md) {
             visibility: visible;
